--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
     "name": "dark-pink",
     "displayName": "Dark Pink",
     "description": "",
-    "version": "0.0.1",
+    "version": "1.0.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/flumiie/Dark-Pink.git"
+    },
     "engines": {
         "vscode": "^1.64.0"
     },
